--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -19,7 +19,7 @@
     <a href="" class="navbar-wagon-item navbar-wagon-link">Contact</a>
 
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "Team", "team.html", class: "navbar-wagon-item navbar-wagon-link"%>
 
     <!-- Notification link-->
     <a href="" class="navbar-wagon-item navbar-wagon-link">
